fixed header slideshow width on small devices

--- a/style.sass
+++ b/style.sass
@@ -727,7 +727,9 @@ ol.carousel-indicators li.active
         align-items: center
         padding-top: 50px
     #header-foreground > .slide > .carousel > .carousel-inner > .carousel-item > .carousel-center
-        padding: 100px
+        padding: 90px
+
+    
 
     .purchase
         flex-direction: column
